<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/unauthorized"
        android:checkableBehavior="single"
        android:title="@string/account">
        <item
            android:id="@+id/nav_login_button"
            android:title="@string/login_res" />
        <item
            android:id="@+id/nav_signup_button"
            android:title="@string/register_res" />
    </group>

    <group
        android:id="@+id/authorized"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_button"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_main_button"
            android:title="@string/main" />
    </group>

    <group
        android:id="@+id/categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leaf_button"
            android:title="@string/leaf" />
        <item
            android:id="@+id/nav_flowers_button"
            android:title="@string/flowers" />
        <item
            android:id="@+id/nav_succulents_button"
            android:title="@string/succulents" />

    </group>

    <item
        android:id="@+id/nav_signout_button"
        android:title="@string/sign_out" />
</menu>